load("//build/bazelutil/unused_checker:unused.bzl", "get_x_data")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sqlfmt_lib",
    srcs = ["main.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/sqlfmt",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_cockroachdb_errors//:errors",
        "//pkg/sql/parser",
        "//pkg/sql/sem/tree",
    ],
)

go_binary(
    name = "sqlfmt",
    embed = [":sqlfmt_lib"],
    visibility = ["//visibility:public"],
)

get_x_data(name = "get_x_data")


